# eclibc

./: .gitignore  CMakeLists.txt  README.md  configure
.pkgconfig/: eclibc.pc
ec/: CMakeLists.txt  eclibc.pc.in  emoji.c  io.c  itoa.c  linux.c  log.c  map.c  printf.c  socket.c  string.c  time.c  utf8.c  vector.c
ec/benchmark/: CMakeLists.txt  compare.c  performance.c
ec/internal/: CMakeLists.txt  digits.c  vprintf_internal.c  vprintf_mtx_internal.c  vprintf_safe_internal.c  vsprintf_internal.c  vurlprintf_internal.c
include/: CMakeLists.txt
include/ec/: CMakeLists.txt  ansi.h  arch.h  emoji.h  ftoa.h  ieee754.h  io.h  io_mtx.h  linux.h  log.h  map.h  mutex.h  preprocessor.h  printf.h  socket.h  string.h  time.h  types.h  url.h  utf8.h  vector.h
include/ec/benchmark/: CMakeLists.txt  compare.h  performance.h
include/ec/internal/: CMakeLists.txt  pad_string.h  print_format_table.h  printf_fix_optimizer.h  spad_string.h  sprintf_fix_optimizer.h  urlpad_string.h  vprintf_internal.h  vprintf_mtx_internal.h  vprintf_safe_internal.h  vsprintf_internal.h  vurlprintf_internal.h
include/ec/internal/text_parse/: CMakeLists.txt  ftoa.h  itoa.h  printf_format.h
include/ec/macro/: CMakeLists.txt  earg_helper.h
pkgconfig/: eclibc.pc
